--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "url": "https://github.com/nickmask/redux-practice/issues"
   },
   "homepage": "http://redux.js.org",
-    "dependencies": {
-      "babel-polyfill": "^6.3.14",
-      "react": "^0.14.7",
-      "react-dom": "^0.14.7",
-      "react-redux": "^4.1.2",
-      "redux": "^3.1.2"
+  "dependencies": {
+    "babel-polyfill": "^6.3.14",
+    "isomorphic-fetch": "^2.2.1",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-redux": "^4.1.2",
+    "redux": "^3.1.2"
   },
   "devDependencies": {
     "babel-core": "^6.3.15",
